03-demo4-k8s/k8s/redis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-demo
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: app-demo
  labels: { app: redis }
spec:
  selector: { app: redis }
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: app-demo
spec:
  replicas: 1
  selector: { matchLabels: { app: redis } }
  template:
    metadata: { labels: { app: redis } }
    spec:
      containers:
        - name: redis
          image: redis:7
          args: ["--save","", "--appendonly","no"]  # ephemeral for dev
          ports: [{ name: redis, containerPort: 6379 }]
          readinessProbe:
            tcpSocket: { port: 6379 }
            initialDelaySeconds: 3
            periodSeconds: 5
