03-demo4-k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-hello
  labels:
    app: nestjs-hello
spec:
  selector:
    app: nestjs-hello
  ports:
    - port: 3000
      targetPort: 3000
